csrc/tests/zxbc_parse_expected/explicit_crash.err.expected
<PROJECT_ROOT>/tests/functional/arch/zx48k/explicit_crash.bas:9: error: Undeclared variable "x"
<PROJECT_ROOT>/tests/functional/arch/zx48k/explicit_crash.bas:10: error: Undeclared variable "y"
<PROJECT_ROOT>/tests/functional/arch/zx48k/explicit_crash.bas:11: error: Undeclared variable "y"
<PROJECT_ROOT>/tests/functional/arch/zx48k/explicit_crash.bas:11: error: Undeclared variable "x"
